# PythonPractice

./: .gitignore  01_01_sphinx_use.md  README.md  pyproject.toml
01_01/: main.py
01_01/src/: calc.py  main.py
01_01/src/figure/: circle.py
01_01_sphinx/src/figure/: rectangle.py
01_02_graphql_bad/: memo.md  requirements_01_02.txt
01_02_graphql_bad/app/: database.py  main.py
01_02_graphql_bad/app/cruds/: seeds.py  todos.py  users.py
01_02_graphql_bad/app/models/: todos.py  users.py
01_03_strawberry_graphql/: memo.md
01_03_strawberry_graphql/app/: main.py
01_04_pylint/: .pre-commit-config.yaml  README.md  hello.py  hello_2.py
01_05_flake8_black_isort/: .pre-commit-config.yaml  README.md  print_test.py
02_01_ijson/: 01_create_big_size_json.py  02_read_json.py
03_01_poetry/: README.md
03_01_poetry/init_test/: app.py  pyproject.toml
03_01_poetry/new_test/: pyproject.toml
03_01_poetry/new_test/new_test/: __init__.py  ml_regression.py
03_01_poetry/new_test/tests/: __init__.py
04_01_asyncio/: 01_01_coroutine_and_task.py  01_02_coroutine_and_task.py  01_08_coroutine_and_task.py  01_10_coroutine_and_task.py  01_11_coroutine_and_task.py  01_12_coroutine_and_task.py  04_00_subprocess.py  README.md
04_01_asyncio_high/: 00_00_runners.py  00_01_runners.py  01_03_coroutine_and_task.py  01_04_coroutine_and_task.py  01_05_coroutine_and_task.py  01_06_coroutine_and_task.py  01_07_coroutine_and_task.py  01_13_coroutine_and_task.py  03_00_streams_server.py  05_00_queue.py
04_02_asyncio_low/: 00_00_event_loop.py  00_01_event_loop.py  01_00_future.py
(+9 files in other folders)
